[feat] theme update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,3 @@
 {
-  "cSpell.words": [
-    "clsx",
-    "decostars",
-    "Devfolio",
-    "fira",
-    "Hackathon",
-    "jetbrains",
-    "tabler"
-  ],
-  "css.lint.unknownAtRules": "ignore"
+  "cSpell.words": ["hackathon", "Nada", "tabler", "webp"]
 }
