--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["hackathon", "Nada", "tabler", "webp"]
+  "cSpell.words": ["hackathon", "hacksrm", "Nada", "tabler", "webp"]
 }
