[feat] new sections added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["hackathon", "hacksrm", "Nada", "tabler", "webp"]
+  "cSpell.words": [
+    "Devfolio",
+    "hackathon",
+    "hacksrm",
+    "Nada",
+    "tabler",
+    "webp"
+  ],
+  "html.format.wrapAttributes": "auto"
 }
