[feat] background updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "Devfolio",
+    "drei",
     "hackathon",
     "hacksrm",
+    "maath",
     "Nada",
     "tabler",
     "webp"
