[feat] animation updated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,3 @@
 {
-  "cSpell.words": [
-    "Devfolio",
-    "drei",
-    "hackathon",
-    "hacksrm",
-    "maath",
-    "Nada",
-    "tabler",
-    "webp"
-  ],
-  "html.format.wrapAttributes": "auto"
+  "cSpell.words": ["Devfolio", "hackathon"]
 }
