[fix] next js to vite react

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Devfolio", "hackathon"]
+  "cSpell.words": [
+    "Devfolio",
+    "drei",
+    "Hackathon",
+    "hacksrmap",
+    "maath",
+    "tabler"
+  ]
 }
