[feat] why-hack-srm section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-  "cSpell.words": [
-    "Devfolio",
-    "drei",
-    "Hackathon",
-    "hacksrmap",
-    "maath",
-    "tabler"
-  ]
+  "cSpell.words": ["hackathon", "Hackathons", "tabler"]
 }
