[feat] update theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["Devfolio", "hackathon", "Hackathons", "tabler"]
+  "cSpell.words": [
+    "Amaravati",
+    "Andhra",
+    "Devfolio",
+    "hackathon",
+    "Hackathons",
+    "Pradesh",
+    "tabler"
+  ]
 }
