--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "hacksrmap",
+  "name": "hacksrm",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\""
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.66.1",
-    "@react-three/fiber": "^8.13.0",
-    "@tabler/icons-react": "^2.17.0",
-    "maath": "^0.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@react-three/drei": "^9.78.0",
+    "@react-three/fiber": "^8.13.4",
+    "@tabler/icons-react": "^2.23.0",
+    "maath": "^0.7.0",
+    "next": "13.4.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "@vitejs/plugin-react-swc": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.5",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4",
-    "vite": "^4.3.3"
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "postcss": "8.4.24",
+    "postcss-nesting": "^12.0.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   }
 }
